@@ -29,12 +29,16 @@ $Id$
 
 #clear-cache-actions-menu li img {
 	float: left;
-	padding-right: 3px;
+	padding-right: 6px;
 }
 
 #clear-cache-actions-menu li a {
 	display: block;
 	padding-bottom: 2px;
 	padding-left: 3px;
+	vertical-align: middle;
+}
+
+#clear-cache-actions-menu li a span.t3-icon {
 	vertical-align: middle;
 }
